--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -52,10 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\GetAllLumberFamilies.cs" />
+    <Compile Include="Commands\GetAllProductFamilies.cs" />
+    <Compile Include="Commands\GetLumberProductById.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\GetCommand.cs" />
-    <Compile Include="Commands\GetRootProductFamilies.cs" />
+    <Compile Include="Commands\GetProductFamiliesByParentId.cs" />
+    <Compile Include="Models\LumberFamily.cs" />
     <Compile Include="Models\ProductFamily.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
