--- a/Thermory.Business/Thermory.Business.csproj
+++ b/Thermory.Business/Thermory.Business.csproj
@@ -40,6 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandDirectory.cs" />
+    <Compile Include="Models\LumberProduct.cs" />
+    <Compile Include="Models\LumberSubCategory.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductCategory.cs" />
+    <Compile Include="Models\ProductSubCategory.cs" />
+    <Compile Include="Models\ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
