--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -54,12 +54,17 @@
   <ItemGroup>
     <Compile Include="Commands\GetAllLumberFamilies.cs" />
     <Compile Include="Commands\GetAllProductFamilies.cs" />
-    <Compile Include="Commands\GetLumberProductById.cs" />
+    <Compile Include="Commands\GetAllLumberProducts.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Commands\IGetCommand.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\GetCommand.cs" />
-    <Compile Include="Commands\GetProductFamiliesByParentId.cs" />
+    <Compile Include="Models\IDbLumberFamily.cs" />
+    <Compile Include="Models\IDbLumberProduct.cs" />
+    <Compile Include="Models\IDbProductFamily.cs" />
     <Compile Include="Models\LumberFamily.cs" />
+    <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\ProductFamily.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
