--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICommand.cs" />
-    <Compile Include="IGetCommand.cs" />
-    <Compile Include="ILumberFamily.cs" />
-    <Compile Include="IProductFamily.cs" />
+    <Compile Include="ILumberProduct.cs" />
+    <Compile Include="ILumberSubCategory.cs" />
+    <Compile Include="IProduct.cs" />
+    <Compile Include="IProductCategory.cs" />
+    <Compile Include="IProductSubCategory.cs" />
+    <Compile Include="IProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
