--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ILumberProduct.cs" />
+    <Compile Include="ILumberProductType.cs" />
     <Compile Include="ILumberSubCategory.cs" />
     <Compile Include="IProduct.cs" />
     <Compile Include="IProductCategory.cs" />
