Added Product table which is a base table for LumberProduct.

--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICustomer.cs" />
     <Compile Include="ILumberProduct.cs" />
     <Compile Include="ILumberProductType.cs" />
     <Compile Include="ILumberSubCategory.cs" />
