--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -62,9 +62,11 @@
     <Compile Include="Commands\GetCommand.cs" />
     <Compile Include="Models\IDbLumberFamily.cs" />
     <Compile Include="Models\IDbLumberProduct.cs" />
+    <Compile Include="Models\IDbProduct.cs" />
     <Compile Include="Models\IDbProductFamily.cs" />
     <Compile Include="Models\LumberFamily.cs" />
     <Compile Include="Models\LumberProduct.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductFamily.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
