Adding product inventory. Proof of concept is hard coded in inventory web page, but am working to do the calculations in classes instead and to get the inventory values on page load rather than cache so they get updated.

--- a/Thermory.Business/Thermory.Business.csproj
+++ b/Thermory.Business/Thermory.Business.csproj
@@ -41,11 +41,13 @@
   <ItemGroup>
     <Compile Include="CommandDirectory.cs" />
     <Compile Include="LengthConverter.cs" />
+    <Compile Include="Models\LumberInventory.cs" />
     <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\LumberProductType.cs" />
     <Compile Include="Models\LumberSubCategory.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
+    <Compile Include="Models\ProductInventory.cs" />
     <Compile Include="Models\ProductSubCategory.cs" />
     <Compile Include="Models\ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
