--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Commands\GetAllLumberFamilies.cs" />
     <Compile Include="Commands\GetAllProductFamilies.cs" />
     <Compile Include="Commands\GetAllLumberProducts.cs" />
+    <Compile Include="Commands\GetAllProductInventories.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\IGetCommand.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
@@ -64,10 +65,12 @@
     <Compile Include="Models\IDbLumberProduct.cs" />
     <Compile Include="Models\IDbProduct.cs" />
     <Compile Include="Models\IDbProductFamily.cs" />
+    <Compile Include="Models\IDbProductInventory.cs" />
     <Compile Include="Models\LumberFamily.cs" />
     <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductFamily.cs" />
+    <Compile Include="Models\ProductInventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
   </ItemGroup>
