Added inventory calculations and displayed on inventory worksheet.

--- a/Thermory.Business/Thermory.Business.csproj
+++ b/Thermory.Business/Thermory.Business.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandDirectory.cs" />
+    <Compile Include="Commands\UpdateLumberProductInventory.cs" />
+    <Compile Include="Commands\GetAllLumberProducts.cs" />
     <Compile Include="LengthConverter.cs" />
     <Compile Include="Models\LumberInventory.cs" />
     <Compile Include="Models\LumberProduct.cs" />
