--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Commands\GetAllLumberProductInventories.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\IGetCommand.cs" />
+    <Compile Include="Commands\UpdateProductInventory.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\GetCommand.cs" />
