--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Commands\IGetCommand.cs" />
     <Compile Include="Commands\UpdateProductInventory.cs" />
     <Compile Include="DatabaseCommandDirectory.cs" />
-    <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\DatabaseCommand.cs" />
     <Compile Include="Commands\GetCommand.cs" />
     <Compile Include="Models\IDbLumberFamily.cs" />
     <Compile Include="Models\IDbLumberProduct.cs" />
@@ -74,6 +74,7 @@
     <Compile Include="Models\ProductInventory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
+    <Compile Include="TransactionalCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Thermory.Domain\Thermory.Domain.csproj">
