Added product type enum to categorize product families for easy selection.

--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IInventory.cs" />
     <Compile Include="IProductSubCategory.cs" />
     <Compile Include="IProductType.cs" />
+    <Compile Include="ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
