--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -75,9 +75,10 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductFamily.cs" />
     <Compile Include="Models\ProductInventory.cs" />
+    <Compile Include="Models\ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
-    <Compile Include="TransactionalCommand.cs" />
+    <Compile Include="Commands\TransactionalCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Thermory.Domain\Thermory.Domain.csproj">
