--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\GetAllLumberCategories.cs" />
     <Compile Include="Commands\GetAllLumberFamilies.cs" />
     <Compile Include="Commands\GetAllMiscellaneousProducts.cs" />
     <Compile Include="Commands\GetAllProductFamilies.cs" />
@@ -63,14 +64,20 @@
     <Compile Include="DatabaseCommandDirectory.cs" />
     <Compile Include="Commands\DatabaseCommand.cs" />
     <Compile Include="Commands\DatabaseGetCommand.cs" />
+    <Compile Include="Models\IDbLumberCategory.cs" />
     <Compile Include="Models\IDbLumberFamily.cs" />
     <Compile Include="Models\IDbLumberProduct.cs" />
+    <Compile Include="Models\IDbLumberSubCategory.cs" />
+    <Compile Include="Models\IDbLumberType.cs" />
     <Compile Include="Models\IDbMiscellaneousProduct.cs" />
     <Compile Include="Models\IDbProduct.cs" />
     <Compile Include="Models\IDbProductFamily.cs" />
     <Compile Include="Models\IDbProductInventory.cs" />
+    <Compile Include="Models\LumberCategory.cs" />
     <Compile Include="Models\LumberFamily.cs" />
     <Compile Include="Models\LumberProduct.cs" />
+    <Compile Include="Models\LumberSubCategory.cs" />
+    <Compile Include="Models\LumberType.cs" />
     <Compile Include="Models\MiscellaneousProduct.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductFamily.cs" />
