--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ILumberProduct.cs" />
     <Compile Include="ILumberProductType.cs" />
     <Compile Include="ILumberSubCategory.cs" />
+    <Compile Include="IMiscellaneousProduct.cs" />
     <Compile Include="IProduct.cs" />
     <Compile Include="IProductCategory.cs" />
     <Compile Include="IInventory.cs" />
