--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -195,9 +195,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\InventoryWorksheet.cs" />
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\SalesOrderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
