Added Miscellaneous Product hierarchy classes to data project and added method to retrieve Miscellaneous Categories that populates the Miscellaneous Sub Categories and Miscellaneous Products.

--- a/Thermory.Data.Test/Thermory.Data.Test.csproj
+++ b/Thermory.Data.Test/Thermory.Data.Test.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Commands\GetAllLumberCategoriesTest.cs" />
     <Compile Include="Commands\GetAllLumberProductsTest.cs" />
+    <Compile Include="Commands\GetAllMiscellaneousCategoriesTest.cs" />
     <Compile Include="Commands\GetAllMiscellaneousProductsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
