--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\GetAllLumberCategories.cs" />
+    <Compile Include="Commands\GetAllMiscellaneousCategories.cs" />
     <Compile Include="Commands\GetAllMiscellaneousProducts.cs" />
     <Compile Include="Commands\GetAllLumberProducts.cs" />
     <Compile Include="Commands\ICommand.cs" />
@@ -65,12 +66,16 @@
     <Compile Include="Models\IDbLumberProduct.cs" />
     <Compile Include="Models\IDbLumberSubCategory.cs" />
     <Compile Include="Models\IDbLumberType.cs" />
+    <Compile Include="Models\IDbMiscellaneousCategory.cs" />
     <Compile Include="Models\IDbMiscellaneousProduct.cs" />
+    <Compile Include="Models\IDbMiscellaneousSubCategory.cs" />
     <Compile Include="Models\LumberCategory.cs" />
     <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\LumberSubCategory.cs" />
     <Compile Include="Models\LumberType.cs" />
+    <Compile Include="Models\MiscellaneousCategory.cs" />
     <Compile Include="Models\MiscellaneousProduct.cs" />
+    <Compile Include="Models\MiscellaneousSubCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
     <Compile Include="Commands\TransactionalCommand.cs" />
