--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -41,12 +41,13 @@
   <ItemGroup>
     <Compile Include="ICustomer.cs" />
     <Compile Include="ILumberCategory.cs" />
-    <Compile Include="ILumberInventory.cs" />
     <Compile Include="ILumberProduct.cs" />
     <Compile Include="ILumberProductType.cs" />
     <Compile Include="ILumberSubCategory.cs" />
     <Compile Include="ILumberType.cs" />
+    <Compile Include="IMiscellaneousCategory.cs" />
     <Compile Include="IMiscellaneousProduct.cs" />
+    <Compile Include="IMiscellaneousSubCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
