--- a/Thermory.Data/Thermory.Data.csproj
+++ b/Thermory.Data/Thermory.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\IDbMiscellaneousSubCategory.cs" />
     <Compile Include="Models\IDbMiscellaneousTransactionDetail.cs" />
     <Compile Include="Models\InventoryTransaction.cs" />
+    <Compile Include="Models\IDbOrder.cs" />
     <Compile Include="Models\LumberCategory.cs" />
     <Compile Include="Models\LumberProduct.cs" />
     <Compile Include="Models\LumberSubCategory.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="Models\MiscellaneousProduct.cs" />
     <Compile Include="Models\MiscellaneousSubCategory.cs" />
     <Compile Include="Models\MiscellaneousTransactionDetail.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThermoryContext.cs" />
     <Compile Include="Commands\TransactionalCommand.cs" />
