--- a/Thermory.Data.Test/Thermory.Data.Test.csproj
+++ b/Thermory.Data.Test/Thermory.Data.Test.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Commands\GetAllMiscellaneousProductsTest.cs" />
     <Compile Include="DatabaseCommandDirectoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\OrderHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
