--- a/Thermory.Domain/Thermory.Domain.csproj
+++ b/Thermory.Domain/Thermory.Domain.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AdjustmentMultiplier.cs" />
     <Compile Include="Constants\OrderTypeNames.cs" />
+    <Compile Include="Constants\TransactionTypeNames.cs" />
     <Compile Include="Enums\OrderTypes.cs" />
     <Compile Include="Enums\TransactionTypes.cs" />
     <Compile Include="LengthConverter.cs" />
