--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Order\_LumberLineItem.cshtml" />
     <Content Include="Views\Order\_MiscellaneousLineItem.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Order\Review.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
