--- a/Thermory.Web/Thermory.Web.csproj
+++ b/Thermory.Web/Thermory.Web.csproj
@@ -338,10 +338,12 @@
     <Content Include="Views\Inventory\Audit.cshtml" />
     <Content Include="Views\Inventory\_MiscSummary.cshtml" />
     <Content Include="Views\Inventory\_MiscellaneousAuditForm.cshtml" />
-    <Content Include="Views\Order\_LumberLineItem.cshtml" />
-    <Content Include="Views\Order\_MiscellaneousLineItem.cshtml" />
+    <Content Include="Views\Order\_LumberLineItemForm.cshtml" />
+    <Content Include="Views\Order\_MiscellaneousLineItemForm.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\Review.cshtml" />
+    <Content Include="Views\Order\_LumberLineItem.cshtml" />
+    <Content Include="Views\Order\_MiscellaneousLineItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
